Managed/RHI/Internal/RhiNative.cs

using System;
using System.Runtime.InteropServices;

namespace Luna.RHI.Internal;

internal static class RhiNative
{
    private const string LibraryName = "LunaRHIC";

    [DllImport(LibraryName, EntryPoint = "luna_rhi_init_module")]
    internal static extern UIntPtr InitModule();

    [DllImport(LibraryName, EntryPoint = "luna_rhi_get_backend_type")]
    internal static extern uint GetBackendType();

    [DllImport(LibraryName, EntryPoint = "luna_rhi_get_main_device")]
    internal static extern UIntPtr GetMainDevice(out NativeRhiDeviceHandle outDevice);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_new_device")]
    internal static extern UIntPtr NewDevice(IntPtr adapter, out NativeRhiDeviceHandle outDevice);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_get_num_adapters")]
    internal static extern UIntPtr GetNumAdapters(out uint outCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_get_adapter")]
    internal static extern UIntPtr GetAdapter(uint index, out NativeRhiAdapterHandle outAdapter);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_adapter_get_name")]
    internal static extern UIntPtr AdapterGetName(IntPtr adapter, out IntPtr outName);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_child_get_device")]
    internal static extern UIntPtr DeviceChildGetDevice(IntPtr deviceChildObject, out NativeRhiDeviceHandle outDevice);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_child_set_name")]
    internal static extern UIntPtr DeviceChildSetName(
        IntPtr deviceChildObject,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_get_num_command_queues")]
    internal static extern UIntPtr DeviceGetNumCommandQueues(IntPtr device, out uint outCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_get_command_queue_desc")]
    internal static extern UIntPtr DeviceGetCommandQueueDesc(IntPtr device, uint index, out NativeCommandQueueDesc outDesc);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_get_command_queue_timestamp_frequency")]
    internal static extern UIntPtr DeviceGetCommandQueueTimestampFrequency(IntPtr device, uint index, out double outFrequency);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_check_feature")]
    internal static extern UIntPtr DeviceCheckFeature(IntPtr device, uint feature, out ulong outValue);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_get_texture_data_placement_info")]
    internal static extern UIntPtr DeviceGetTextureDataPlacementInfo(
        IntPtr device,
        uint width,
        uint height,
        uint depth,
        uint format,
        out NativeTextureDataPlacementInfo outInfo);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_is_resources_aliasing_compatible")]
    internal static extern UIntPtr DeviceIsResourcesAliasingCompatible(
        IntPtr device,
        uint memoryType,
        [In] NativeBufferDesc[]? buffers,
        ulong bufferCount,
        [In] NativeTextureDesc[]? textures,
        ulong textureCount,
        out int outCompatible);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_allocate_memory")]
    internal static extern UIntPtr DeviceAllocateMemory(
        IntPtr device,
        uint memoryType,
        [In] NativeBufferDesc[]? buffers,
        ulong bufferCount,
        [In] NativeTextureDesc[]? textures,
        ulong textureCount,
        out NativeRhiDeviceMemoryHandle outMemory);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_buffer")]
    internal static extern UIntPtr DeviceNewBuffer(IntPtr device, uint memoryType, in NativeBufferDesc desc, out NativeRhiBufferHandle outBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_texture")]
    internal static extern UIntPtr DeviceNewTexture(IntPtr device, uint memoryType, in NativeTextureDesc desc, out NativeRhiTextureHandle outTexture);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_texture_with_clear_value")]
    internal static extern UIntPtr DeviceNewTextureWithClearValue(IntPtr device, uint memoryType, in NativeTextureDesc desc, in NativeClearValue optimizedClearValue, out NativeRhiTextureHandle outTexture);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_aliasing_buffer")]
    internal static extern UIntPtr DeviceNewAliasingBuffer(IntPtr device, IntPtr deviceMemory, in NativeBufferDesc desc, out NativeRhiBufferHandle outBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_aliasing_texture")]
    internal static extern UIntPtr DeviceNewAliasingTexture(IntPtr device, IntPtr deviceMemory, in NativeTextureDesc desc, out NativeRhiTextureHandle outTexture);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_aliasing_texture_with_clear_value")]
    internal static extern UIntPtr DeviceNewAliasingTextureWithClearValue(IntPtr device, IntPtr deviceMemory, in NativeTextureDesc desc, in NativeClearValue optimizedClearValue, out NativeRhiTextureHandle outTexture);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_fence")]
    internal static extern UIntPtr DeviceNewFence(IntPtr device, out NativeRhiFenceHandle outFence);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_query_heap")]
    internal static extern UIntPtr DeviceNewQueryHeap(IntPtr device, in NativeQueryHeapDesc desc, out NativeRhiQueryHeapHandle outQueryHeap);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_descriptor_set_layout")]
    internal static extern UIntPtr DeviceNewDescriptorSetLayout(
        IntPtr device,
        [In] NativeDescriptorSetLayoutBinding[]? bindings,
        ulong bindingCount,
        uint flags,
        out NativeRhiDescriptorSetLayoutHandle outDescriptorSetLayout);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_descriptor_set")]
    internal static extern UIntPtr DeviceNewDescriptorSet(
        IntPtr device,
        IntPtr descriptorSetLayout,
        uint numVariableDescriptors,
        out NativeRhiDescriptorSetHandle outDescriptorSet);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_pipeline_layout")]
    internal static extern UIntPtr DeviceNewPipelineLayout(
        IntPtr device,
        [In] IntPtr[]? descriptorSetLayouts,
        ulong descriptorSetLayoutCount,
        uint flags,
        out NativeRhiPipelineLayoutHandle outPipelineLayout);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_graphics_pipeline_state")]
    internal static extern UIntPtr DeviceNewGraphicsPipelineState(
        IntPtr device,
        NativeGraphicsPipelineStateDesc desc,
        out NativeRhiPipelineStateHandle outPipelineState);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_compute_pipeline_state")]
    internal static extern UIntPtr DeviceNewComputePipelineState(
        IntPtr device,
        NativeComputePipelineStateDesc desc,
        out NativeRhiPipelineStateHandle outPipelineState);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_swap_chain")]
    internal static extern UIntPtr DeviceNewSwapChain(
        IntPtr device,
        uint commandQueueIndex,
        IntPtr windowObject,
        in NativeSwapChainDesc desc,
        out NativeRhiSwapChainHandle outSwapChain);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_new_command_buffer")]
    internal static extern UIntPtr DeviceNewCommandBuffer(IntPtr device, uint commandQueueIndex, out NativeRhiCommandBufferHandle outCommandBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_swap_chain_get_desc")]
    internal static extern UIntPtr SwapChainGetDesc(IntPtr swapChain, out NativeSwapChainDesc outDesc);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_swap_chain_get_window")]
    internal static extern UIntPtr SwapChainGetWindow(IntPtr swapChain, out NativeRhiWindowHandle outWindow);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_swap_chain_get_surface_transform")]
    internal static extern UIntPtr SwapChainGetSurfaceTransform(IntPtr swapChain, out uint outTransform);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_swap_chain_get_current_back_buffer")]
    internal static extern UIntPtr SwapChainGetCurrentBackBuffer(IntPtr swapChain, out NativeRhiTextureHandle outTexture);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_swap_chain_present")]
    internal static extern UIntPtr SwapChainPresent(IntPtr swapChain);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_swap_chain_reset_suggested")]
    internal static extern UIntPtr SwapChainResetSuggested(IntPtr swapChain, out int outSuggested);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_swap_chain_reset")]
    internal static extern UIntPtr SwapChainReset(IntPtr swapChain, in NativeSwapChainDesc desc);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_get_command_queue_index")]
    internal static extern UIntPtr CommandBufferGetCommandQueueIndex(IntPtr commandBuffer, out uint outIndex);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_reset")]
    internal static extern UIntPtr CommandBufferReset(IntPtr commandBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_attach_device_object")]
    internal static extern UIntPtr CommandBufferAttachDeviceObject(IntPtr commandBuffer, IntPtr deviceObject);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_begin_event")]
    internal static extern UIntPtr CommandBufferBeginEvent(
        IntPtr commandBuffer,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string eventName);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_end_event")]
    internal static extern UIntPtr CommandBufferEndEvent(IntPtr commandBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_resource_barrier")]
    internal static extern UIntPtr CommandBufferResourceBarrier(
        IntPtr commandBuffer,
        [In] NativeBufferBarrier[]? bufferBarriers,
        ulong bufferBarrierCount,
        [In] NativeTextureBarrier[]? textureBarriers,
        ulong textureBarrierCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_begin_render_pass")]
    internal static extern UIntPtr CommandBufferBeginRenderPassNoDepth(
        IntPtr commandBuffer,
        [In] NativeColorAttachment[]? colorAttachments,
        uint colorAttachmentCount,
        [In] NativeResolveAttachment[]? resolveAttachments,
        uint resolveAttachmentCount,
        IntPtr depthStencilAttachment,
        IntPtr occlusionQueryHeap,
        IntPtr timestampQueryHeap,
        IntPtr pipelineStatisticsQueryHeap,
        uint timestampQueryBeginPassWriteIndex,
        uint timestampQueryEndPassWriteIndex,
        uint pipelineStatisticsQueryWriteIndex,
        uint arraySize,
        byte sampleCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_begin_render_pass")]
    internal static extern UIntPtr CommandBufferBeginRenderPassWithDepth(
        IntPtr commandBuffer,
        [In] NativeColorAttachment[]? colorAttachments,
        uint colorAttachmentCount,
        [In] NativeResolveAttachment[]? resolveAttachments,
        uint resolveAttachmentCount,
        in NativeDepthStencilAttachment depthStencilAttachment,
        IntPtr occlusionQueryHeap,
        IntPtr timestampQueryHeap,
        IntPtr pipelineStatisticsQueryHeap,
        uint timestampQueryBeginPassWriteIndex,
        uint timestampQueryEndPassWriteIndex,
        uint pipelineStatisticsQueryWriteIndex,
        uint arraySize,
        byte sampleCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_graphics_pipeline_layout")]
    internal static extern UIntPtr CommandBufferSetGraphicsPipelineLayout(IntPtr commandBuffer, IntPtr pipelineLayout);
